test_project/test_pcks/invalid/gdscript_builtin.tscn
[gd_scene load_steps=3 format=3 uid="uid://gmehj7x5sr87"]

[ext_resource type="Texture2D" uid="uid://hvv34iteq3mg" path="res://icon.png" id="1_3i6gk"]

[sub_resource type="GDScript" id="GDScript_u5r4b"]
script/source = "# Built-in script
extends Node


func _ready():
    pass
"

[node name="GDScriptBuiltin" type="Node"]
script = SubResource("GDScript_u5r4b")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_3i6gk")
